--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <title>Custom Element Demo</title>
     <script type="text/javascript" src="list-option.js"></script>
+    <script type="text/javascript" src="multi-select-list.js"></script>
 </head>
 <body>
-    <list-option label="United Kingdom"></list-option>
+    <multi-select-list options='["United Kingdom", "France", "Germany", "Belgium", "Austria", "Spain", "Italy", "Greece",
+        "Denmark", "Norway", "Sweden", "Latvia"]'>
+    </multi-select-list>
 </body>
 </html>
